// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=2 1`] = `
{
  "adjustedReturn": {
    "usd": "39.080516560144370997564",
    "valueInCurrency": "13.843437199999998601572",
  },
  "cost": {
    "usd": "240.919483439855629002436",
    "valueInCurrency": "0.156562800000001398428",
  },
  "gasFee": {
    "effective": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "max": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "total": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "totalMaxNetworkFee": {
    "amount": "0.001",
    "usd": "0.02",
    "valueInCurrency": "0.001",
  },
  "totalNetworkFee": {
    "amount": "0.001",
    "usd": "0.02",
    "valueInCurrency": "0.001",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=5 1`] = `
{
  "adjustedReturn": {
    "usd": "13.8434372",
    "valueInCurrency": "13.8434372",
  },
  "cost": {
    "usd": "0.1565628",
    "valueInCurrency": "0.1565628",
  },
  "gasFee": {
    "effective": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "max": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "total": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "14",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.001",
    "usd": "0.001",
    "valueInCurrency": "0.001",
  },
  "totalNetworkFee": {
    "amount": "0.001",
    "usd": "0.001",
    "valueInCurrency": "0.001",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=true 1`] = `
{
  "adjustedReturn": {
    "usd": "13.8244372",
    "valueInCurrency": "13.8434372",
  },
  "cost": {
    "usd": "266.1755628",
    "valueInCurrency": "0.1565628",
  },
  "gasFee": {
    "effective": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "max": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
    "total": {
      "amount": "0",
      "usd": "0",
      "valueInCurrency": "0",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.001",
    "usd": "0.02",
    "valueInCurrency": "0.001",
  },
  "totalNetworkFee": {
    "amount": "0.001",
    "usd": "0.02",
    "valueInCurrency": "0.001",
  },
}
`;
